# Linux-Weasel

./: CMakeLists.txt
WeaselServer/: LLMProvider.cpp  LLMProvider.h
fcitx5-addon/: wisdom-weasel.conf.in
fcitx5-addon/src/: wisdom-weasel.cpp
plans/: linux-port-plan.md
wisdom-core/: CMakeLists.txt
wisdom-core/include/wisdom-core/: context_history.h  http_client.h  llm_provider.h  memory_compressor.h  string_utils.h
wisdom-core/src/: context_history.cpp  http_client.cpp  memory_compressor.cpp  openai_provider.cpp
wisdom-daemon/src/: daemon.cpp  daemon.h
